test/tests/compiler/18_structures/invalid_types/invalid_member_operators/arrow_pointer_to_non_struct.plx
type struc s(    l: i64    )

pub fn main(none) i32 {
    d: f64 = 0.0
    ptr: *f64 = @d
    return ptr[].l #  can't apply -> operator to pointer to non-struct
}
